@@ -12,6 +12,8 @@ common:
 	  openblas_set_num_threads(int num_threads)" when USE_OPENMP=1
 	* Added extern "C" to support C++. Thank Tasio for the patch(Refs 
 	  issue #21 on github)
+	* Provided an error message when the arch is not supported.(Refs 
+	  issue #19 on github)
 
 x86/x86_64:
 	* 
